--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,12 @@
+# http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Digest-SHA2
-version:      1.0.0
+version:      1.1.0
 version_from: SHA2.pm
 installdirs:  site
 requires:
+    Digest::base:                  1.00
     MIME::Base64:                  0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.10_03
+generated_by: ExtUtils::MakeMaker version 6.17
