--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,15 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Digest-SHA2
-version:      1.1.0
-version_from: SHA2.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Digest-SHA2
+version:             1.1.1
+abstract:            ~
+license:             ~
+generated_by:        ExtUtils::MakeMaker version 6.36
+distribution_type:   module
+requires:     
     Digest::base:                  1.00
     MIME::Base64:                  0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Julius C. Duque {jcduque}{at}{lycos}{dot}{com}
